@@ -15,10 +15,11 @@
  - Fixed perl IRC::print_with_channel 1.8.x incompatibility.
  - xtext: Fixed bugs in new scrolling code.
  - Use filesystem encoding for log filenames.
+ - Focus the inputbox when left-clicking in xtext.
  - 
  - 
  TODO:
-  * fix xtext grid_offset[]
+  * fix xtext grid_offset[] (done, testing)
   * fix bad inputgad focus tracking (done, testing)
 
 
